Pequeno ajuste de layout
Ajuste no estilo do botão de voltar na tela de Saldo

--- a/BlueBank/index.html
+++ b/BlueBank/index.html
@@ -45,7 +45,7 @@
             <!-- /ko -->
 
                 <td>TOTAL</td>
-                <td data-bind="text:total"></td>
+                <td class="btn btn-primary" data-bind="text:total"></td>
           </tbody>
         </table>
 
